2019-12-17  Andy Buckley  <andy.buckley@cern.ch>

	* Add a Python mapping of the findFile() function.

2019-09-04  Andy Buckley  <andy.buckley@cern.ch>

	* Add convenience accessor attributes to PDFUncertainty in Python.

2019-08-14  Andy Buckley  <andy.buckley@cern.ch>

	* Fix lhapdf script handling of unknown index file and data
	directory paths. Thanks to Mateusz Ploskon.

2019-07-30  Andy Buckley  <andy.buckley@cern.ch>

	* Use ast abstract syntax tree standard module rather than yaml to
	parse metadata value strings in Python.

	* Make PDFInfo Python mapping inherit from Info.

	* Change annotation storage to be pure YAML format rather than
	hand-rolled approximation for limited types.

	* Upgrade bundled yaml-cpp to v0.6.0 to solve parsing issues with
	complex types (thanks to Zahari Kassabov.)

2019-07-08  Andy Buckley  <andy.buckley@cern.ch>

	* Actually delete the previous AlphaS object when calling PDF::setAlphaS().

2019-06-04  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Modify lhapdf script to support Content-Length in HTTP header not
	given as a list so that file size is calculated correctly for CERN EOS.

2019-05-21  Andy Buckley  <andy.buckley@cern.ch>

	* Add a couple of extra trim() calls to path strings given to the Fortran API.

2019-05-11  Andy Buckley  <andy.buckley@cern.ch>

	* Apply lhapdf script improvement from Ivan Razumov / Genser.

2019-05-10  Andy Buckley  <andy.buckley@cern.ch>

	* Version 6.2.2!

2019-05-08  Andy Buckley  <andy.buckley@cern.ch>

	* Don't pop the final path entry off in the pathsPrepend and
	pathsAppend functions: the compile-time fallback may have been
	disabled.

2019-05-02  Andy Buckley  <andy.buckley@cern.ch>

	* Add a 'show' option to the lhapdf script.

	* Adapt MPI file-reading patch from Stefan Hoeche. Enable with --enable-mpi to configure.

	* Rewrite the lhapdf data-manager script to use argparse, for compatibility with Python 3.

2019-03-29  Andy Buckley  <andy.buckley@cern.ch>
